# wpe-sfos-build

./: .gitignore  BubblewrapLauncher-sfos-sandbox.patch  README.md  RPM-GPG-KEY-atlantic-ci  atlantic-ci.repo  build-all.sh  build-rpms-native.sh  easylist-to-webkit.py  index.html  libexecve_wrap2.c  libgetauxval_fix.c  libglibc-compat.c  libharfbuzz_icu_stub.c  libsigill_skip.c  libsigill_skip2.c  make_wpe_wrapper.c  native-meson.ini  patch-glibc-versions.py  patch-isoc23.py  qt5-plugin-gnuinstalldirs.patch  qt5-plugin-texture-cache.patch  setup-rpmbuild.sh  sfos-meson-cross.ini  sfos-toolchain-clang.cmake  sfos-toolchain-native.cmake  sfos-toolchain.cmake  versions.env  webkit-quirks-no-video.patch  webkit-ramsize-cstddef.patch  webkit-wtf-header-includes.patch  wpeqtview-carryforward.patch  wpeqtview-sfos-api.patch  wpeqtview-viewport-scale.patch
.github/workflows/: build-atlantic-packages.yml  cli-tests.yml
aarch64/: bubblewrap-0.11.0-332.1.aarch64.rpm  index.html  libepoxy-1.5.11-332.1.aarch64.rpm  libwpe-1.17.0-332.1.aarch64.rpm  wpe-sfos-compat-1.0.0-332.1.aarch64.rpm  wpebackend-fdo-1.17.0-332.1.aarch64.rpm  wpewebkit2-qt5-2.52.4-332.1.aarch64.rpm  xdg-dbus-proxy-0.1.6-332.1.aarch64.rpm
aarch64/repodata/: 3934ff8ccd8da57d64d3c738bacaf035e5c2ed8826575cebcd4ed57106cd0dde-other.sqlite.bz2  baca82dc84d2418293ddf017651485eb7e890e0ff2e7f72a171ee67632dc1f19-primary.sqlite.bz2  d6affc17ef1077f7453653e6d827aef2d2faddef9dbbfbda984083f4531b024e-filelists.sqlite.bz2  repomd.xml  repomd.xml.asc
adblock-engine/: Cargo.toml
adblock-engine/src/: lib.rs
cmake/: atlantic-wpe-features.cmake
deploy/: WPEGPUProcess.sh  WPENetworkProcess.sh  WPEWebProcess.sh  atlantic-browser.firejail.profile  runtime-common.sh  sailfish-browser-wpe  sailfish-browser.desktop
docs/: RENDERING-AUDIT.md
patches/engine/: libepoxy-rtld-default-fallback.patch
patches/qt-bridge/: qt5-plugin-30fps-throttle.patch  qt5-plugin-adaptive-fps.patch  qt5-plugin-displayimage-window-update.patch  qt5-plugin-epoxy-gl-fix.patch  qt5-plugin-exported-image-lifetime.patch  qt5-plugin-texture-cache.patch
patches/webkit/: webkit-bubblewrap-sfos-odm-fix.patch  webkit-bubblewrap-sfos-sandbox.patch  webkit-directional-tile-coverage-env.patch  webkit-glfence-disable-env.patch  webkit-gpu-process-by-default-wpe.patch  webkit-gpu-process-egl-default-display-fallback.patch  webkit-gst-buffer-tuning.patch  webkit-icu-imported-targets.patch  webkit-jsc-assembler-platform.patch  webkit-jsc-b3-cstdint.patch  webkit-jsc-b3-export-macros.patch  webkit-jsc-b3-platform.patch  webkit-jsc-bytecode-platform.patch  webkit-jsc-cpu-b3-includes.patch  webkit-jsc-dfg-platform.patch  webkit-jsc-ftl-platform.patch  webkit-jsc-glib-export-macros.patch  webkit-jsc-heap-cstddef.patch  webkit-jsc-inspector-remote-glib.patch  webkit-jsc-jit-platform.patch  webkit-jsc-linux-arm64-jit-thresholds.patch  webkit-jsc-linux-arm64-thread-tuning.patch  webkit-jsc-llint-build-defines.patch  webkit-jsc-lol-platform.patch  webkit-jsc-shell-object-link.patch  webkit-jsc-wasm-platform.patch  webkit-kinetic-decel-friction-env.patch  webkit-kinetic-jank-resilient-end.patch  webkit-memory-pressure-threshold-env.patch  webkit-memoryfootprint-cstddef.patch  (+31 more)
qt5-plugin/: CMakeLists.txt  WPEQtView.cpp  WPEQtView.h  WPEQtViewBackend.cpp  WPEQtViewBackend.h  WPEWaylandSubsurface.cpp  WPEWaylandSubsurface.h
rpm/: libepoxy.spec  libwpe.spec  wpe-sfos-compat.spec  wpebackend-fdo.spec  wpewebkit2-qt5.spec  wpewebkit2.spec
sailjail/: atlantic-browser.permission  atlantic-browser.profile  sailfish-browser.profile
scripts/: bootstrap-host.sh  build-adblock-engine.sh  build-adblock-lists.sh  build-engine.sh  build-sandbox-deps.sh  build-ui.sh  build-webkit.sh  ci-build.sh  common.sh  package-rpms.sh  patches.sh  stage-compat-shims.sh  update-sysroot.sh  write-runtime-env.py  write-webkit-feature-flags.py
tests/: test_cli_tools.py
web-extension/: CMakeLists.txt  atlantic-adblock-extension.c
(+48 files in other folders)
